Adding saga state worker project

--- a/Stock.API/appsettings.json
+++ b/Stock.API/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.; Database=StockDb; Trusted_Connection=True; TrustServerCertificate=True;"
+  },
   "RabbitMqSettings": {
     "Host": "rabbitmq://localhost:5673",
     "Username": "guest",
