--- a/SagaStateMachineWorkerService/appsettings.json
+++ b/SagaStateMachineWorkerService/appsettings.json
@@ -2,12 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.; Database=OrderDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.; Database=SagaDb; Trusted_Connection=True; TrustServerCertificate=True;"
   },
   "RabbitMqSettings": {
     "Host": "rabbitmq://localhost:5673",
